--- a/app/src/main/res/layout/quotes_fragment.xml
+++ b/app/src/main/res/layout/quotes_fragment.xml
@@ -29,7 +29,7 @@
             android:layout_height="match_parent">
 
             <androidx.cardview.widget.CardView
-                android:id="@+id/cardContent"
+                android:id="@+id/card_quote"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -63,7 +63,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toEndOf="@id/cardContent"
+                app:layout_constraintStart_toEndOf="@id/card_quote"
                 app:layout_constraintTop_toTopOf="parent"
                 android:layout_marginStart="10dp"
                 app:cardCornerRadius="6dp"
