--- a/app/src/main/res/layout/quotes_fragment.xml
+++ b/app/src/main/res/layout/quotes_fragment.xml
@@ -2,8 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools">
+    android:layout_height="match_parent">
 
     <EditText
         android:id="@+id/searchView"
@@ -15,7 +14,7 @@
         android:layout_marginTop="20dp"
         android:layout_marginHorizontal="15dp"
         android:backgroundTint="?colorPrimary"
-        android:hint="Hint"/>
+        android:hint="@string/hint_search"/>
 
     <ScrollView
         android:id="@+id/scrollView"
@@ -52,7 +51,7 @@
                         android:ellipsize="end"
                         android:textSize="13sp"
                         android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
-                        android:text="Quote"/>
+                        android:text="@string/filter_quote"/>
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -83,7 +82,7 @@
                         android:ellipsize="end"
                         android:textSize="13sp"
                         android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
-                        android:text="Tag"/>
+                        android:text="@string/filter_tag"/>
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -114,7 +113,7 @@
                         android:ellipsize="end"
                         android:textSize="13sp"
                         android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
-                        android:text="Author"/>
+                        android:text="@string/filter_author"/>
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
